# glass-model

./: .gitignore  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
examples/: igu.py
glass_model/: __init__.py  glass_model.py  gstr.py
glass_model.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  test_glass_model.py
